create extension if not exists pgcrypto;

alter table if exists public.organization
add column if not exists logo_url text,
add column if not exists created_at timestamptz not null default now(),
add column if not exists updated_at timestamptz;

alter table if exists public.role
add column if not exists description text,
add column if not exists created_at timestamptz not null default now(),
add column if not exists updated_at timestamptz;

alter table if exists public.user_account
add column if not exists subscription_tier varchar not null default 'Free',
add column if not exists created_at timestamptz not null default now(),
add column if not exists updated_at timestamptz;

create table if not exists public.profile (
  profile_id uuid primary key default gen_random_uuid(),
  user_id uuid unique references public.user_account(user_id) on delete cascade,
  full_name varchar,
  phone_number varchar,
  address text,
  bio text,
  profile_picture_url text,
  created_at timestamptz not null default now(),
  updated_at timestamptz
);

create table if not exists public.availability (
  availability_id integer generated by default as identity primary key,
  user_id uuid references public.user_account(user_id) on delete cascade,
  day_of_week varchar,
  start_time time,
  end_time time,
  status varchar
);

create table if not exists public.skill (
  skill_id integer generated by default as identity primary key,
  skill_name varchar unique,
  description text,
  created_at timestamptz default now(),
  updated_at timestamptz
);

create table if not exists public.user_skill (
  user_id uuid references public.user_account(user_id) on delete cascade,
  skill_id integer references public.skill(skill_id) on delete cascade,
  proficiency_level integer,
  created_at timestamptz default now(),
  updated_at timestamptz,
  primary key (user_id, skill_id)
);

create table if not exists public.qualification (
  qualification_id integer generated by default as identity primary key,
  qualification_name varchar unique,
  description text,
  created_at timestamptz default now(),
  updated_at timestamptz
);

create table if not exists public.user_qualification (
  user_id uuid references public.user_account(user_id) on delete cascade,
  qualification_id integer references public.qualification(qualification_id) on delete cascade,
  institution varchar,
  graduation_year integer,
  created_at timestamptz default now(),
  updated_at timestamptz,
  primary key (user_id, qualification_id)
);

create table if not exists public.task_skill (
  task_id integer references public.task(task_id) on delete cascade,
  skill_id integer references public.skill(skill_id) on delete cascade,
  created_at timestamptz default now(),
  updated_at timestamptz,
  primary key (task_id, skill_id)
);

create table if not exists public.task_qualification (
  task_id integer references public.task(task_id) on delete cascade,
  qualification_id integer references public.qualification(qualification_id) on delete cascade,
  created_at timestamptz default now(),
  updated_at timestamptz,
  primary key (task_id, qualification_id)
);

create table if not exists public.task_assignment_request (
  request_id integer generated by default as identity primary key,
  task_id integer references public.task(task_id) on delete cascade,
  user_id uuid references public.user_account(user_id) on delete cascade,
  requested_at timestamptz default now(),
  status varchar default 'Pending'
);

create table if not exists public.notification (
  notification_id integer generated by default as identity primary key,
  user_id uuid references public.user_account(user_id) on delete cascade,
  message text,
  is_read boolean default false,
  created_at timestamptz default now()
);

create table if not exists public.activity_log (
  log_id integer generated by default as identity primary key,
  user_id uuid references public.user_account(user_id) on delete set null,
  action varchar,
  details text,
  created_at timestamptz default now()
);

insert into public.skill (skill_name, description)
values
  ('Customer Support', 'Can handle customer service and front desk duties.'),
  ('Inventory', 'Can perform stock count and inventory checks.')
on conflict (skill_name) do update
set description = excluded.description,
    updated_at = now();

notify pgrst, 'reload schema';
