Table organization {
    organization_id uuid [pk]
    organization_name varchar [not null]
    organization_code varchar [unique]
    organization_email varchar [unique]
    organization_type varchar
    logo_url text
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}

Table role {
    role_id int [pk]
    role_name varchar [not null, unique]
    description text
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}

Table user_account {
    user_id uuid [pk]
    role_id int [ref: > role.role_id]
    organization_id uuid [ref: > organization.organization_id]
    username varchar [not null, unique]
    email varchar [not null, unique]
    account_status varchar [not null, default: 'Active']
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}

Table profile {
    profile_id uuid [pk]
    user_id uuid [unique, ref: > user_account.user_id]
    full_name varchar
    phone_number varchar
    address text
    bio text
    profile_picture_url text
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}



Table availability {
    availability_id int [pk]
    user_id uuid [ref: > user_account.user_id]
    day_of_week varchar
    start_time time
    end_time time
    status varchar
}

Table skill {
    skill_id int [pk, increment]
    skill_name varchar [unique, not null]
    description text
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}

Table user_skill {
    user_id uuid [pk, ref: > user_account.user_id]
    skill_id int [pk, ref: > skill.skill_id]
    proficiency_level varchar [not null]
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}

Table qualification {
    qualification_id int [pk]
    qualification_name varchar unique
    description text
    created_at timestamptz
    updated_at timestamptz
}

Table user_qualification {
    user_id uuid [ref: > user_account.user_id]
    qualification_id int [ref: > qualification.qualification_id]
    institution varchar
    graduation_year int
    created_at timestamptz
    updated_at timestamptz
}

Table workspace {
    workspace_id uuid [pk]
    workspace_name varchar [not null]
    description text
    created_by uuid [not null, ref: > user_account.user_id]
    status varchar [not null, default: 'Active']
    visibility varchar [not null, default: 'Private']
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
    "created_by, workspace_name" unique
}

Table workspace_member {
    workspace_id uuid [pk, ref: > workspace.workspace_id]
    user_id uuid [pk, ref: > user_account.user_id]
    joined_at timestamptz [not null, default: `now()`]
}

Table task {
    task_id int [pk]
    organization_id uuid [not null, ref: > organization.organization_id]
    workspace_id uuid [ref: > workspace.workspace_id]
    title varchar [not null]
    description text
    owner_id uuid [not null, ref: > user_account.user_id]
    assigned_to uuid [ref: > user_account.user_id]
    status varchar [not null, default: 'Open']
    priority varchar [not null, default: 'Medium']
    start_datetime timestamptz
    end_datetime timestamptz
    sort_order int [not null, default: 0]
    created_at timestamptz
    updated_at timestamptz
}

Table task_comment {
    comment_id int [pk]
    task_id int [not null, ref: > task.task_id]
    parent_comment_id int [ref: > task_comment.comment_id]
    created_by uuid [not null, ref: > user_account.user_id]
    comment_body text [not null]
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}

Table task_file {
    file_id int [pk]
    task_id int [not null, ref: > task.task_id]
    added_by uuid [not null, ref: > user_account.user_id]
    entry_type varchar [not null]
    display_text text
    link_url text
    storage_path text
    mime_type varchar
    file_size_bytes int
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz
}

Table task_skill {
    task_id int [ref: > task.task_id]
    skill_id int [ref: > skill.skill_id]
    created_at timestamptz
    updated_at timestamptz
}

Table task_qualification {
    task_id int [ref: > task.task_id]
    qualification_id int [ref: > qualification.qualification_id]
    created_at timestamptz
    updated_at timestamptz
}

Table task_assignment {
    assignment_id int [pk]
    task_id int [ref: > task.task_id]
    user_id uuid [ref: > user_account.user_id]
    assigned_at timestamptz
    status varchar [not null, default: 'Assigned']
}

Table task_assignment_request {
    request_id int [pk]
    task_id int [ref: > task.task_id]
    user_id uuid [ref: > user_account.user_id]
    requested_at timestamptz
    status varchar
}

Table notification {
    notification_id int [pk]
    user_id uuid [ref: > user_account.user_id]
    message text
    is_read boolean
    created_at timestamptz
}

Table activity_log {
    log_id int [pk]
    user_id uuid [ref: > user_account.user_id]
    action varchar
    details text
    created_at timestamptz
}
